# GenAI_Cookbook

./: README.md  pyproject.toml
agents/: data_viz_agent.ipynb  reflection_agent.ipynb  reflexion_agent.ipynb  sql_agent.ipynb
