[project]
name = "genai-cookbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chainlit>=2.6.3",
    "ddgs>=9.4.3",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.115.14",
    "ipykernel>=6.30.0",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.18",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.8",
    "langchain-ollama>=0.3.6",
    "langgraph>=0.5.4",
    "matplotlib>=3.10.3",
    "mwparserfromhell>=0.7.2",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "pywikibot>=10.2.0",
    "tabulate>=0.9.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.54.0",
]
